# user_service

./: .env  Cargo.toml  Makefile  docker-compose.yml
migrations/2020-02-09-235135_users_table/: up.sql
src/: main.rs  schema.rs
src/config/: database.rs
src/errors/: api_error.rs
src/handlers/: user_handler.rs
src/models/: user.rs
